--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "oauth2-server": "^2.4.1"
   },
   "devDependencies": {
+    "del": "^2.2.2",
     "gulp": "^3.9.1",
     "gulp-tslint": "^6.1.1",
     "gulp-typescript": "^3.0.1",
